--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar_links_access_filter: 0
   admin_toolbar_search: 0
   admin_toolbar_tools: 0
+  ajax_form: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -13,6 +14,7 @@ module:
   ckeditor5: 0
   comment: 0
   config: 0
+  config_form: 0
   contact: 0
   contextual: 0
   custom_general: 0
@@ -26,6 +28,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  generic_form: 0
   help: 0
   history: 0
   image: 0
@@ -39,6 +42,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  routing_tasks: 0
   search: 0
   shortcut: 0
   standard: 0
