FT2023-366: Pushing the task related to movies in entity API.

--- a/config/sync/core.entity_form_display.node.movie.default.yml
+++ b/config/sync/core.entity_form_display.node.movie.default.yml
@@ -1,29 +1,27 @@
-uuid: 0dc2fe9f-1809-416b-9476-4dd556fbe6d3
+uuid: 476e6865-a76f-4ce6-bd3f-e63ae2bd5231
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.article.body
-    - field.field.node.article.field_image
-    - field.field.node.article.field_my_custom_field
-    - field.field.node.article.field_tags
+    - field.field.node.movie.body
+    - field.field.node.movie.field_image
+    - field.field.node.movie.field_movie_price
     - image.style.thumbnail
-    - node.type.article
+    - node.type.movie
   module:
     - image
-    - my_custom_field
     - path
     - text
 _core:
-  default_config_hash: ewbd6G2uX456-bgwseM2Q-KQG3RkASoyHmTh-XR3oLU
-id: node.article.default
+  default_config_hash: urHt8GBEjb9aSzw4P23yfcZYFs2eC_NhUtKY1ycuRqk
+id: node.movie.default
 targetEntityType: node
-bundle: article
+bundle: movie
 mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 6
     region: content
     settings:
       rows: 9
@@ -31,60 +29,54 @@ content:
       placeholder: ''
       show_summary: false
     third_party_settings: {  }
+    label: hidden
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
     type: image_image
-    weight: 1
+    weight: 8
     region: content
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
-  field_my_custom_field:
-    type: custom_field_widget
-    weight: 121
+  field_movie_price:
+    type: number
+    weight: 9
     region: content
     settings:
-      placeholder: 'default new'
-    third_party_settings: {  }
-  field_tags:
-    type: entity_reference_autocomplete_tags
-    weight: 3
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
       placeholder: ''
     third_party_settings: {  }
+  links:
+    weight: 100
+    region: content
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 4
     region: content
     settings:
       display_label: true
@@ -99,7 +91,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
