--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
         "drupal/devel": "^5.1",
-        "drupal/pathauto": "^1.11"
+        "drupal/devel_entity_updates": "^4.1",
+        "drupal/pathauto": "^1.11",
+        "drush/drush": "^11.5"
     },
     "conflict": {
         "drupal/drupal": "*"
