--- a/config/sync/core.entity_view_display.node.article.rss.yml
+++ b/config/sync/core.entity_view_display.node.article.rss.yml
@@ -5,8 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.rss
     - field.field.node.article.body
-    - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_my_custom_field
     - field.field.node.article.field_tags
     - node.type.article
   module:
@@ -23,6 +23,6 @@ content:
     region: content
 hidden:
   body: true
-  comment: true
   field_image: true
+  field_my_custom_field: true
   field_tags: true
