--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -5,8 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
-    - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_my_custom_field
     - field.field.node.article.field_tags
     - image.style.medium
     - node.type.article
@@ -33,8 +33,8 @@ content:
     type: image
     label: hidden
     settings:
-      image_style: medium
       image_link: content
+      image_style: medium
       image_loading:
         attribute: lazy
     third_party_settings: {  }
@@ -52,6 +52,6 @@ content:
     weight: 100
     region: content
 hidden:
-  comment: true
   field_image: true
+  field_my_custom_field: true
   field_tags: true
