--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,17 +11,20 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  check: 0
   ckeditor5: 0
   comment: 0
   config: 0
   config_form: 0
   contact: 0
   contextual: 0
+  custom_bar: 0
   custom_general: 0
   datetime: 0
   dblog: 0
   dependency_module: 0
   devel: 0
+  devel_entity_updates: 0
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
@@ -38,6 +41,8 @@ module:
   link: 0
   menu_link_content: 0
   menu_ui: 0
+  movie_module: 0
+  my_custom_field: 0
   myblock: 0
   mymodule: 0
   mysql: 0
@@ -49,6 +54,7 @@ module:
   routing_tasks: 0
   search: 0
   shortcut: 0
+  snippets: 0
   standard: 0
   system: 0
   taxonomy: 0
