--- a/web/modules/custom/movie_module/config/install/field.field.node.movie.body.yml
+++ b/web/modules/custom/movie_module/config/install/field.field.node.movie.body.yml
@@ -1,16 +1,16 @@
-# field.field.node.car_brand.body.yml
+# field.field.node.movie.body.yml
 langcode: en
 status: true
 dependencies:
     config:
         - field.storage.node.body
-        - node.type.car_brand
+        - node.type.movie
     module:
         - text
-id: node.car_brand.body
+id: node.movie.body
 field_name: body
 entity_type: node
-bundle: car_brand
+bundle: movie
 label: Body
 description: 'More specific information about the car brand.'
 required: false
